vlib/v/checker/tests/invalid_nil_err.vv
fn main() {
  a := unsafe { &nil }
  assert false
}